--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,58 @@ html {
 }
 
 /*== Google translate style ==*/
+/* 
+.translated-ltr {
+  margin-top: -40px !important;
+}
+.translated-ltr {
+  margin-top: -40px !important;
+}
+.goog-te-banner-frame {
+  display: none;
+}
+
+.goog-logo-link {
+  display: none !important;
+}
+
+.goog-te-gadget-simple img {
+  display: none !important;
+}
+
+.goog-te-gadget-simple {
+  padding: 7px 10px !important;
+  margin-bottom: -30px !important;
+  border-radius: 10px;
+}
+
+.goog-te-gadget-simple span {
+  padding-right: 3px !important;
+} */
+
+/*== search drawer style ==*/
+
+.drawer {
+  -webkit-transform: translate3d(0, -142px, 0);
+  -moz-transform: translate3d(0, -142px, 0);
+  -o-transform: translate3d(0, -142px, 0);
+  transform: translate3d(0, -142px, 0);
+  -webkit-transition: -webkit-transform 0.25s linear;
+  -moz-transition: -moz-transform 0.25s linear;
+  -o-transition: -o-transform 0.25s linear;
+  transition: transform 0.25s linear;
+  position: absolute;
+}
+.drawer.active {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+
+
+/*== Google translate style ==*/
 
 .translated-ltr {
   margin-top: -40px !important;
@@ -38,31 +90,14 @@ html {
 }
 
 .goog-te-gadget-simple {
-  padding: 7px 10px !important;
+  /* padding: 7px 10px !important; */
+  padding-left: 5px !important;
   margin-bottom: -30px !important;
-  border-radius: 10px;
+  background: none !important;
+  border: none !important;
 }
 
-.goog-te-gadget-simple span {
-  padding-right: 3px !important;
-}
-
-/*== search drawer style ==*/
-
-.drawer {
-  -webkit-transform: translate3d(0, -142px, 0);
-  -moz-transform: translate3d(0, -142px, 0);
-  -o-transform: translate3d(0, -142px, 0);
-  transform: translate3d(0, -142px, 0);
-  -webkit-transition: -webkit-transform 0.25s linear;
-  -moz-transition: -moz-transform 0.25s linear;
-  -o-transition: -o-transform 0.25s linear;
-  transition: transform 0.25s linear;
-  position: absolute;
-}
-.drawer.active {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+.goog-te-menu-value span:last-child,
+.goog-te-menu-value span:nth-child(3) {
+  display: none !important;
 }
